styles/main.css
/* ... */
/*
=============== 
Global Styles
===============
*/

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: var(--ff-primary);
  background: var(--clr-white);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}
ul {
  list-style-type: none;
}
a {
  text-decoration: none;
}
img:not(.nav-logo) {
  width: 100%;
  display: block;
}

h1,
h2,
h3,
h4 {
  letter-spacing: var(--spacing);
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
}
h1 {
  font-size: 3rem;
}
h2 {
  font-size: 2rem;
}
h3 {
  font-size: 1.25rem;
}
h4 {
  font-size: 0.875rem;
}
p {
  margin-bottom: 1.25rem;
  color: var(--clr-grey-5);
}
@media screen and (min-width: 800px) {
  h1 {
    font-size: 4rem;
  }
  h2 {
    font-size: 2.5rem;
  }
  h3 {
    font-size: 1.75rem;
  }
  h4 {
    font-size: 1rem;
  }
  body {
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4 {
    line-height: 1;
  }
}
/*  global classes */

.btn {
  text-transform: uppercase;
  background: var(--clr-primary-5);
  color: var(--clr-white);
  padding: 0.375rem 0.75rem;
  letter-spacing: var(--spacing);
  display: inline-block;
  /* font-weight: 700; */
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid transparent;
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
}
.btn:hover {
  color: var(--clr-primary-1);
  background: var(--clr-primary-8);
}

.section {
  padding: 5rem 0;
}

.section-title {
  text-align: center;
  margin-bottom: 4rem;
}

.section-title h2 {
  text-transform: uppercase;
}

.section-title span {
  color: var(--clr-primary-5);
}

.section-center {
  width: 90vw;
  margin: 0 auto;
  max-width: 1170px;
}

@media screen and (min-width: 992px) {
  .section-centre {
    width: 95%;
  }
}

/*
=============== 
Navbar
===============
*/
.navbar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: var(--clr-white);
  box-shadow: var(--dark-shadow);
  z-index: 2;
}
.nav-logo {
  margin: 0;
  padding: 0;
  line-height: 1;
  font-size: 1rem;
}
.nav-logo span {
  color: var(--clr-primary-5);
}
.nav-icons {
  display: none;
}
.nav-center {
  width: 100%;
  max-width: 1170px;
  margin: 0 auto;
}
.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
}
.nav-toggle {
  background: transparent;
  border: transparent;
  font-size: 1.5rem;
  color: var(--clr-primary-5);
  cursor: pointer;
  transition: var(--transition);
}
.nav-toggle:hover {
  transform: scale(1.2);
}
.nav-link {
  display: block;
  padding: 1rem 2rem;
  text-transform: capitalize;
  letter-spacing: var(--spacing);
  transition: var(--transition);
  color: var(--clr-grey-1);
  cursor: pointer;
  font-size: 1rem;
}
.nav-link:hover {
  color: var(--clr-primary-1);
  background: var(--clr-primary-8);
  padding-left: 2.25rem;
}

.nav-links {
  height: 0;
  overflow: hidden;
  transition: var(--transition);
}

.show-links {
  height: 280px;
}
@media screen and (min-width: 992px) {
  .navbar {
    padding: 1rem 2rem;
  }
  /* hide toggle */
  .nav-toggle {
    display: none;
  }
  .nav-center {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
  }
  .nav-links {
    height: auto;
    display: flex;
  }
  .nav-header {
    padding: 0 0;
  }
  .nav-link {
    padding: 0 0;
    margin-right: 0.7rem;
  }
  .nav-link:hover {
    padding: 0;
    color: var(--clr-primary-5);
    background: transparent;
  }
  .nav-icons {
    display: flex;
  }
  .nav-icon {
    margin-right: 0.7rem;
    color: var(--clr-grey-5);
    font-size: 1.2;
    transition: var(--transition);
  }
  .nav-icon:hover {
    color: var(--clr-grey-8);
  }
}

/*
=============== 
Hero
===============
*/
.hero {
  min-height: 100vh;
  background: var(--clr-primary-5);
  display: flex;
  justify-content: center;
  align-items: center;
}

.hero-banner {
  text-align: center;
  color: var(--clr-white);
  padding: 0 3rem;
}

.hero-banner h1 {
  text-transform: uppercase;
}

.hero-banner p {
  max-width: 35rem;
  margin-left: auto;
  margin-right: auto;
  color: var(--clr-white);
  letter-spacing: var(--spacing);
}

.hero-btn {
  padding: 0.9rem 1.6rem;
  font-size: 1.25rem;
  background-color: var(--clr-white);
  color: var(--clr-grey-5);
}

.hero-btn:hover {
  background: transparent;
  color: var(--clr-white);
  border-color: var(--clr-white);
}

@media screen and (min-width: 768px) {
  .hero {
    background:
      linear-gradient(rgba(116, 185, 234, 0.7), rgba(0, 0, 0, 0.7)),
      url("../images/main-bcg-jpeg.jpg") center/cover no-repeat;
  }
  .hero-banner {
    padding: 0;
  }
  .hero-banner p {
    max-width: 40rem;
  }
} /*
=============== 
About
===============
*/
/* section add to globals */
/* title add to globals */
/* section center add to globals */
.about-img,
.about-info {
  margin-bottom: 2rem;
}

@media screen and (min-width: 992px) {
  .about-center {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
  }
  .about-img,
  .about-info {
    flex: 0 0 calc(50% - 2rem);
    margin-bottom: 0;
    align-self: center;
  }
}

@media screen and (min-width: 1170px) {
  .about-img::before {
    content: "";
    position: absolute;
    border: 0.5rem solid var(--clr-primary-5);
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    top: -1.5rem;
    left: -1.5rem;
  }
  .about-img {
    position: relative;
  }
  .about-photo {
    position: relative;
  }
}

/*
=============== 
Services
===============
*/

.services {
  background: var(--clr-grey-10);
}

.service {
  text-align: center;
  margin-bottom: 3rem;
}

.service-icon {
  background: var(--clr-primary-5);
  color: var(--clr-primary-1);
  padding: 0.5rem;
  display: inline-block;
  font-size: 2rem;
  margin-bottom: 1.5rem;
}

.service-text {
  max-width: 20rem;
  margin-left: auto;
  margin-right: auto;
}
/* ... */

